--- a/tutorial/inference_1_ModelsAndPEByHand.ipynb
+++ b/tutorial/inference_1_ModelsAndPEByHand.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -38,66 +38,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Python 2.7 will reach the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 won't be maintained after that date. A future version of pip will drop support for Python 2.7. More details about Python 2 support in pip, can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support\u001b[0m\n",
-      "Requirement already satisfied: pycbc in /home/ahnitz/projects/env/lib/python2.7/site-packages/PyCBC-1e247c-py2.7-linux-x86_64.egg (1e247c)\n",
-      "Requirement already satisfied: lalsuite in /home/ahnitz/projects/env/lib/python2.7/site-packages (6.62)\n",
-      "Requirement already satisfied: ligo-common in /home/ahnitz/projects/env/lib/python2.7/site-packages (1.0.3)\n",
-      "Requirement already satisfied: numpy>=1.16.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.16.6)\n",
-      "Requirement already satisfied: Mako>=1.0.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.1.0)\n",
-      "Requirement already satisfied: cython>=0.29 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (0.29.13)\n",
-      "Requirement already satisfied: decorator>=3.4.2 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (4.4.0)\n",
-      "Requirement already satisfied: matplotlib>=1.5.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.2.5)\n",
-      "Requirement already satisfied: pillow in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (6.1.0)\n",
-      "Requirement already satisfied: h5py>=2.5 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.9.0)\n",
-      "Requirement already satisfied: jinja2 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.10.3)\n",
-      "Requirement already satisfied: mpld3>=0.3 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (0.3)\n",
-      "Requirement already satisfied: lscsoft-glue>=1.59.3 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.0.0)\n",
-      "Requirement already satisfied: emcee==2.2.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.2.1)\n",
-      "Requirement already satisfied: requests>=1.2.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.22.0)\n",
-      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (4.8.0)\n",
-      "Requirement already satisfied: six>=1.10.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.12.0)\n",
-      "Requirement already satisfied: ligo-segments in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.2.0)\n",
-      "Requirement already satisfied: tqdm in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (4.35.0)\n",
-      "Requirement already satisfied: gwdatafind in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.0.4)\n",
-      "Requirement already satisfied: astropy<3.0.0,>=2.0.3 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (2.0.16)\n",
-      "Requirement already satisfied: scipy<1.3.0,>=0.16.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pycbc) (1.2.2)\n",
-      "Requirement already satisfied: python-dateutil in /home/ahnitz/projects/env/lib/python2.7/site-packages (from lalsuite) (2.8.0)\n",
-      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from Mako>=1.0.1->pycbc) (1.0)\n",
-      "Requirement already satisfied: subprocess32 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (3.5.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (0.10.0)\n",
-      "Requirement already satisfied: backports.functools-lru-cache in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (1.5)\n",
-      "Requirement already satisfied: pytz in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (2019.2)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (2.4.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (1.1.0)\n",
-      "Requirement already satisfied: pyOpenSSL in /home/ahnitz/projects/env/lib/python2.7/site-packages (from lscsoft-glue>=1.59.3->pycbc) (16.2.0)\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (2.8)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (1.25.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (2019.6.16)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from beautifulsoup4>=4.6.0->pycbc) (1.9.3)\n",
-      "Requirement already satisfied: pytest<3.7,>=2.8 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from astropy<3.0.0,>=2.0.3->pycbc) (3.6.4)\n",
-      "Requirement already satisfied: setuptools in /home/ahnitz/projects/env/lib/python2.7/site-packages (from kiwisolver>=1.0.1->matplotlib>=1.5.1->pycbc) (42.0.2)\n",
-      "Requirement already satisfied: cryptography>=1.3.4 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (2.7)\n",
-      "Requirement already satisfied: pluggy<0.8,>=0.5 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (0.7.1)\n",
-      "Requirement already satisfied: atomicwrites>=1.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (1.3.0)\n",
-      "Requirement already satisfied: more-itertools>=4.0.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (5.0.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (19.1.0)\n",
-      "Requirement already satisfied: py>=1.5.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (1.8.0)\n",
-      "Requirement already satisfied: funcsigs; python_version < \"3.0\" in /home/ahnitz/projects/env/lib/python2.7/site-packages (from pytest<3.7,>=2.8->astropy<3.0.0,>=2.0.3->pycbc) (1.0.2)\n",
-      "Requirement already satisfied: enum34; python_version < \"3\" in /home/ahnitz/projects/env/lib/python2.7/site-packages (from cryptography>=1.3.4->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.1.6)\n",
-      "Requirement already satisfied: asn1crypto>=0.21.0 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from cryptography>=1.3.4->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (0.24.0)\n",
-      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /home/ahnitz/projects/env/lib/python2.7/site-packages (from cryptography>=1.3.4->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.12.3)\n",
-      "Requirement already satisfied: ipaddress; python_version < \"3\" in /home/ahnitz/projects/env/lib/python2.7/site-packages (from cryptography>=1.3.4->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.0.22)\n",
-      "Requirement already satisfied: pycparser in /home/ahnitz/projects/env/lib/python2.7/site-packages (from cffi!=1.11.3,>=1.8->cryptography>=1.3.4->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (2.19)\n",
-      "\u001b[33mWARNING: You are using pip version 19.2.3, however version 20.0.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Requirement already satisfied: pycbc in /home/ahnitz/projects/env/lib/python3.9/site-packages (0.0a8504)\n",
+      "Requirement already satisfied: ligo-common in /home/ahnitz/projects/env/lib/python3.9/site-packages (1.0.3)\n",
+      "Requirement already satisfied: emcee==2.2.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (2.2.1)\n",
+      "Requirement already satisfied: numpy<=1.23.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (1.23.0)\n",
+      "Requirement already satisfied: pillow in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (9.2.0)\n",
+      "Requirement already satisfied: lscsoft-glue>=1.59.3 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (3.0.1)\n",
+      "Requirement already satisfied: tqdm in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (4.64.0)\n",
+      "Requirement already satisfied: scipy>=0.16.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (1.9.0)\n",
+      "Requirement already satisfied: h5py>=3.0.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (3.7.0)\n",
+      "Requirement already satisfied: gwdatafind in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (1.1.1)\n",
+      "Requirement already satisfied: cython>=0.29 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (0.29.32)\n",
+      "Requirement already satisfied: mpld3>=0.3 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (0.5.8)\n",
+      "Requirement already satisfied: astropy!=4.0.5,!=4.2.1,>=2.0.3 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (5.1)\n",
+      "Requirement already satisfied: lalsuite!=7.2 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (7.6)\n",
+      "Requirement already satisfied: matplotlib>=1.5.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (3.5.2)\n",
+      "Requirement already satisfied: python-ligo-lw>=1.7.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (1.8.3)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (1.2.1)\n",
+      "Requirement already satisfied: jinja2 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (3.1.2)\n",
+      "Requirement already satisfied: setuptools in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (44.1.1)\n",
+      "Requirement already satisfied: ligo-segments in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (1.4.0)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (4.11.1)\n",
+      "Requirement already satisfied: pegasus-wms.api>=5.0.3 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pycbc) (5.0.3)\n",
+      "Requirement already satisfied: PyYAML>=3.13 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from astropy!=4.0.5,!=4.2.1,>=2.0.3->pycbc) (6.0)\n",
+      "Requirement already satisfied: pyerfa>=2.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from astropy!=4.0.5,!=4.2.1,>=2.0.3->pycbc) (2.0.0.1)\n",
+      "Requirement already satisfied: packaging>=19.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from astropy!=4.0.5,!=4.2.1,>=2.0.3->pycbc) (21.3)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from beautifulsoup4>=4.6.0->pycbc) (2.3.2.post1)\n",
+      "Requirement already satisfied: python-dateutil in /home/ahnitz/projects/env/lib/python3.9/site-packages (from lalsuite!=7.2->pycbc) (2.8.2)\n",
+      "Requirement already satisfied: pyRXP in /home/ahnitz/projects/env/lib/python3.9/site-packages (from lscsoft-glue>=1.59.3->pycbc) (3.0.1)\n",
+      "Requirement already satisfied: six in /home/ahnitz/projects/env/lib/python3.9/site-packages (from lscsoft-glue>=1.59.3->pycbc) (1.16.0)\n",
+      "Requirement already satisfied: pyOpenSSL in /home/ahnitz/projects/env/lib/python3.9/site-packages (from lscsoft-glue>=1.59.3->pycbc) (22.0.0)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from Mako>=1.0.1->pycbc) (2.0.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from matplotlib>=1.5.1->pycbc) (4.34.4)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from matplotlib>=1.5.1->pycbc) (1.4.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from matplotlib>=1.5.1->pycbc) (0.11.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from matplotlib>=1.5.1->pycbc) (3.0.9)\n",
+      "Requirement already satisfied: pegasus-wms.common in /home/ahnitz/projects/env/lib/python3.9/site-packages (from pegasus-wms.api>=5.0.3->pycbc) (5.0.2)\n",
+      "Requirement already satisfied: igwn-auth-utils[requests]>=0.2.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from gwdatafind->pycbc) (0.2.3)\n",
+      "Requirement already satisfied: cryptography>=2.3 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (36.0.2)\n",
+      "Requirement already satisfied: scitokens>=1.7.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (1.7.0)\n",
+      "Requirement already satisfied: requests>=2.14 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (2.28.1)\n",
+      "Requirement already satisfied: safe-netrc>=1.0.0 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (1.0.0)\n",
+      "Requirement already satisfied: cffi>=1.12 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from cryptography>=2.3->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (1.15.1)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from requests>=2.14->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (2.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from requests>=2.14->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (3.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from requests>=2.14->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (2022.6.15)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from requests>=2.14->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (1.26.11)\n",
+      "Requirement already satisfied: PyJWT>=1.6.1 in /home/ahnitz/projects/env/lib/python3.9/site-packages (from scitokens>=1.7.0->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (2.4.0)\n",
+      "Requirement already satisfied: pycparser in /home/ahnitz/projects/env/lib/python3.9/site-packages (from cffi>=1.12->cryptography>=2.3->igwn-auth-utils[requests]>=0.2.0->gwdatafind->pycbc) (2.21)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "\n",
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 'numpy<=1.23.0' --no-cache-dir"
    ]
   },
   {
@@ -1476,21 +1474,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.17"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
