--- a/tutorial/inference_4_bbh_example/IntroToPyCBCInference.ipynb
+++ b/tutorial/inference_4_bbh_example/IntroToPyCBCInference.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc ligo-common emcee=2.2.1 --no-cache-dir\n",
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 'numpy<=1.23.0' --no-cache-dir\n",
     "\n",
     "# This is needed to access the executables on sciserver. On a personal machine this should be ignore.\n",
     "path = %env PATH\n",
@@ -370,9 +370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7 (py37)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -384,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
