--- a/tutorial/inference_0_Overview.ipynb
+++ b/tutorial/inference_0_Overview.ipynb
@@ -78,7 +78,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 'numpy<=1.23.0' --no-cache-dir"
    ]
   },
   {
@@ -2137,7 +2137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2151,7 +2151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
