--- a/tutorial/inference_1_ModelsAndPEByHand.ipynb
+++ b/tutorial/inference_1_ModelsAndPEByHand.ipynb
@@ -93,9 +93,8 @@
     }
    ],
    "source": [
-    "\n",
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 'numpy<=1.23.0' --no-cache-dir"
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 --no-cache-dir"
    ]
   },
   {
@@ -1488,9 +1487,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
