--- a/tutorial/inference_3-AnalyticExample/IntroToPyCBCInference1.ipynb
+++ b/tutorial/inference_3-AnalyticExample/IntroToPyCBCInference1.ipynb
@@ -109,7 +109,7 @@
    ],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 'numpy<=1.23.0' --no-cache-dir\n",
+    "!{sys.executable} -m pip install pycbc ligo-common emcee==2.2.1 --no-cache-dir\n",
     "\n",
     "# This is needed to access the executables on sciserver. On a personal machine this should be ignore.\n",
     "path = %env PATH\n",
@@ -759,9 +759,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
