fix dynesty install in ringdown 8

--- a/tutorial/inference_8_BHRingdown.ipynb
+++ b/tutorial/inference_8_BHRingdown.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install pykerr dynesty pycbc --no-cache-dir"
+    "!{sys.executable} -m pip install pykerr \"dynesty<3.0\" pycbc --no-cache-dir"
    ]
   },
   {
@@ -626,9 +626,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
